[project]
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
requires-python = ">=3.7"
dependencies = [
    "awkward>=2.0.0",
    "numpy>=1.13.1",
]
name = "midas-tape"
version = "1.0.0"
description = "Read MIDAS tape server files"
license = {text = "BSD-3"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
